[package]
name = "googleapis"
version = "0.0.1"
authors = ["Tyler Neely <tyler.neely@ferrous-systems.com>"]
description = "protobufs (and eventually gRPC) generated for various Google APIs"

[dependencies]
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"

[build-dependencies]
prost-build = "0.4"
